fixed misaligned facebook icon

--- a/less/style.less
+++ b/less/style.less
@@ -730,3 +730,8 @@ html {
 .body {
   max-height: 999999px; // Arbitrarily large number.
 }
+
+// Force Facebook like button to align properly.
+.fb-like.fb_iframe_widget span{
+  vertical-align: top !important;
+}
